--- a/TN01-WFCadastroContato/FormCadastrarContato.resx
+++ b/TN01-WFCadastroContato/FormCadastrarContato.resx
@@ -117,4 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnSalvar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAOsAAADrASts18IAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAB9ElEQVRYR2MYBaMAHbh0/Of36Ple4977owOEjcqebtcrenAchFOnPLo6Z8fTp8TiJbvuP3Lr+R4N
+        NZo44N7zvQ6I/8OwdsGd/0ppl8G4dtHd/8+ev8CJr997/n/B3qf/J25+/P/s9ef/j1+4BTGn+3sT1HjC
+        wL3nRw+5Dlh56Nl/89pH/w1L7/5vWfkA4QAgdmx9uxZqBX5AKwdYN778b9v8ehrUGtyAlg6waX5xGmoN
+        bjCkHTB7x5P/BkDLtfNv/m9d8ZD6DqhZdAerxTB84ebT/3VLH4DxtTvP/5+4cJNyB1jUvvivnnPjv1r2
+        jf+xfbf+n7l46//5K4TxhSs3/s/f+YByB1ALjzqAbAc0b/z2//jNr1jxMSDeffHz/50XMPHJG+//rz/2
+        inIHXHn47f+Pnz//f/v2DQN/BeJPnz////jpEwZ+/fbt/6s371DBAY+AFn39itUSfHjUAcPHAZcefP3/
+        ZSAdcOwG9lROCFPkAFD5D6p8zKqeU+wAkBkgswzLHhDvAKf2z/+t6l//d2r/RLEDQGaAzDKveUKcA+zb
+        3i6zbQI2n6D46r3X/5+/fEU6BlbPV2/cAZthVQ9pqADZe6HW4AZ2LW9lgQr32DS/Og7CB88//nTu2v2f
+        5GCQXpg5QDN3O/W9kYZaMwpGARQwMAAAk8MGD3QHgp8AAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
